--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dandeli Adventure Resorts</title>
-    <meta name="description" content="Experience luxury eco-friendly accommodations in the heart of Dandeli Wildlife Sanctuary" />
-    <meta name="author" content="Dandeli Adventure Resorts" />
+    <title>Nainital Adventure Resort</title>
+    <meta name="description" content="Discover the perfect blend of adventure and tranquility at Nainital Adventure Resort. Enjoy eco-luxury stays, thrilling activities, and breathtaking views in the heart of the Kumaon hills." />
+    <meta name="author" content="Nainital Adventure Resort" />
+    <meta property="og:title" content="Nainital Adventure Resort" />
+    <meta property="og:description" content="Eco-friendly resort in the Himalayas offering luxury accommodation, adventure activities like trekking and paragliding, and serene lake views." />
     <meta property="og:image" content="/og-image.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nainitaladventureresort.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nainital Adventure Resort" />
+    <meta name="twitter:description" content="Experience adventure and luxury amidst the lakes and pines of Nainital." />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
